@@ -459,8 +459,13 @@ geda_bulb_clicked (GtkButton *button)
 
     }
     else {
+
+      bool state;
+
+      state   = geda_toggle_button_get_active (toggle_button);
       toggled = TRUE;
-      toggle_button->active = !toggle_button->active;
+
+      toggle_button->active = !state;
       new_state = (button->in_button ? GTK_STATE_PRELIGHT : GTK_STATE_NORMAL);
     }
   }
