@@ -4,6 +4,8 @@
       use gtk_widget_get_style and geda_get_widget_window when GSEAL_ENABLE is
       defined.
 
+    * src/widgets/geda_bulb.c: Utilize geda_toggle_button_get_active macro.
+
 2020-01-16 Wiley E. Hill <wileyhill@gmail.com>
 
     * src/functions/geda_keyboard.c: Include gdk.h instead of only gdkkeys.h.
